Prevent dates in table cells from wrapping

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -136,6 +136,10 @@ table.grid th, table.grid td {
   padding: 0.3em 0.4em;
 }
 
+td {
+  white-space: nowrap;
+}
+
 .date {
   text-align: center;
 }
